tests/errors/syntax_errors/types_arg_type.py
# pylint: disable=missing-function-docstring, missing-module-docstring

def f(x : 3):
    pass
